[gd_scene load_steps=2 format=1]

[ext_resource path="res://scripts/hud.gd" type="Script" id=1]

[node name="hud" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="PanelDungeonAccess" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 480.0
margin/right = 380.0
margin/bottom = 590.0

[node name="btnworld" type="Button" parent="PanelDungeonAccess"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 20.0
margin/right = 90.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "World"
flat = false

[node name="btndungoen" type="Button" parent="PanelDungeonAccess"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 20.0
margin/right = 180.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Dungeon"
flat = false

[node name="btnmap" type="Button" parent="PanelDungeonAccess"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 80.0
margin/right = 90.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Map"
flat = false

[node name="btncreatures" type="Button" parent="PanelDungeonAccess"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 110.0
margin/top = 50.0
margin/right = 190.0
margin/bottom = 70.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Creatures"
flat = false

[node name="btnadventurers" type="Button" parent="PanelDungeonAccess"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 50.0
margin/right = 100.0
margin/bottom = 70.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Adventurers"
flat = false

[node name="btntraps" type="Button" parent="PanelDungeonAccess"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 80.0
margin/right = 180.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Traps"
flat = false

[node name="btnbuild" type="Button" parent="PanelDungeonAccess"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 190.0
margin/top = 80.0
margin/right = 270.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Build"
flat = false

[node name="btnabilities" type="Button" parent="PanelDungeonAccess"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 280.0
margin/top = 80.0
margin/right = 360.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Abilities"
flat = false

[node name="btnsummon" type="Button" parent="PanelDungeonAccess"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 200.0
margin/top = 50.0
margin/right = 280.0
margin/bottom = 70.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Summon"
flat = false

[node name="btnstatus" type="Button" parent="PanelDungeonAccess"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 190.0
margin/top = 20.0
margin/right = 270.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Status"
flat = false

[node name="btnclose" type="Button" parent="PanelDungeonAccess"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 350.0
margin/top = 0.0
margin/right = 370.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "X"
flat = false

[node name="paneloptions" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 700.0
margin/top = 0.0
margin/right = 1020.0
margin/bottom = 40.0

[node name="btnmainmenu" type="Button" parent="paneloptions"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 10.0
margin/right = 100.0
margin/bottom = 30.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Main Menu"
flat = false

[node name="btnsettings" type="Button" parent="paneloptions"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 110.0
margin/top = 10.0
margin/right = 180.0
margin/bottom = 30.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Settings"
flat = false

[node name="btnexit" type="Button" parent="paneloptions"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 190.0
margin/top = 10.0
margin/right = 240.0
margin/bottom = 30.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Exit"
flat = false

[node name="btnoptions" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 950.0
margin/top = 0.0
margin/right = 1020.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Options"
flat = false

[node name="btnmenu" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 580.0
margin/right = 50.0
margin/bottom = 600.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Menu"
flat = false

[connection signal="pressed" from="PanelDungeonAccess/btnclose" to="." method="_on_btnclose_pressed"]

[connection signal="pressed" from="btnoptions" to="." method="_on_btnoptions_pressed"]

[connection signal="pressed" from="btnmenu" to="." method="_on_btnmenu_pressed"]


